Modify progress display so that the progress bar is outside of each accordion. Fix error display problem where two colors overlap.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -45,12 +45,13 @@ h1{ padding-bottom: 15px}
 td{ text-align:center}
 
 .indentation {
-	margin-left: 2em;
+  margin-left: 2em;
 }
 
 .progress-indent {
-	padding-left: 2em;
-	padding-right: 2em;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-top: 1em;
 }
 
 
@@ -111,6 +112,6 @@ td{ text-align:center}
   line-height:0px;
 }
 .right {
-	float: right;
-	margin-right: 5em;
+  float: right;
+  margin-right: 5em;
 }
